Face and Dog detectors added
Imports and functions to carry out Face and Dog detection and then display results

--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -56,7 +56,7 @@
 <div class="container">
     {% if selection %}
     <div class="page-header">
-        <h1 class="text-center">{{selection}}</h1>
+        <h1 class="text-center">{{prediction}}</h1>
     </div>
     <img src="/static/{{selection}}">
     {% endif %}
